2006-09-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated program version to 20060906.

	* src/g_rc.c, src/gattrib.c src/x_dialog.c: Added CUSTOM_VERSION to
	all printfs/output/dialog boxes where VERSION is used so that it is
	easier to create custom version of gEDA/gaf.

2006-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated gtk+ tests to look for 2.4.x or greater.

2006-08-21   SDB <sdb@cloud9.net>

        * include/prototype.h, src/s_table.c, src/s_toplevel.c: Fixed
	bug in which adding a new attrib column would munge the 
	visibility of existing attributes.

2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.

2006-08-12  SDB <sdb@cloud9.net>
	* include/prototype.h, src/s_misc.c, src/s_sheet_data.c,
	src/s_table.c, src/s_toplevel.c:  Applied patch from Jeff Mallatt
	which implements ability to handle attrib strings with multiple
	= signs. 

2006-08-12  SDB <sdb@cloud9.net>
	* configure.ac, src/parsecmd.c:  Implemented getopt_long
	for systems which have it.
	
2006-08-12  SDB <sdb@cloud9.net>
	* include/prototype.h, include/x_menu.h,
	src/s_visibility.c, src/x_fileselect.c, src/x_gtksheet.c,
	src/x_window.c:  Made cell text different colors depending
	upon attribute visibility.

2006-08-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * src/*.c: Applied Patch#1533798: Remove pre-GTK2 code from geda
        by Peter Brett.

2006-07-31 SDB <sdb@cloud9.net>
        * src/gtksheet_2_2.c: fixed bug in gtk_sheet_make_backing_pixmap.
	
2006-07-25 Stuart Brorson <sdb@cloud9.net>
	* src/f_export.c, src/x_dialog.c and others:  Implemented
	ability to export CSV file of component sheet.

	* ToDos, README:  Updated expository material to reflect current
	state of project.
	